--- a/bootstrap/css/search.css
+++ b/bootstrap/css/search.css
@@ -36,5 +36,36 @@
         max-width: 50%;
     }  
 }
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+.row{
+    background: white;
+    border-radius: 30px;
+    box-shadow: 12px 12px 22px rgb(81, 155, 170);
+    margin-left: -20px;
+    margin-right: 70px;
+}
+img{
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+}
+.btn1{
+    border: none;
+    outline: none;
+    height: 50px;
+    width: 100%;
+    background-color: black;
+    color: white;
+    border-radius: 4px;
+    font-weight: bold;
 
+}
+.btn1:hover{
+    background: white;
+    border: 1px solid;
+    color: black;
+}
 
