--- a/bootstrap/css/search.css
+++ b/bootstrap/css/search.css
@@ -68,4 +68,12 @@ img{
     border: 1px solid;
     color: black;
 }
+.error-msg{
+    margin:10px 0;
+    display: block;
+    background: crimson;
+    border-radius: 5px;
+    font-size: 20px;
+}
+
 
