--- a/bootstrap/css/background.css
+++ b/bootstrap/css/background.css
@@ -1,7 +1,7 @@
 .background{
     min-height: 100vh;
     width: 100%;
-    background-image: url("https://images.pexels.com/photos/7034102/pexels-photo-7034102.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    background-color: w;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -26,7 +26,7 @@
 .background1{
     min-height: 100vh;
     width: 100%;
-    background-image: url("https://images.pexels.com/photos/7034102/pexels-photo-7034102.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    background-color: whitesmoke;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
