--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -57,13 +57,13 @@
 .content h1{
     font-size: 5.5rem;
     color: rgb(252, 252, 251);
-    text-shadow: 3px 2px #292729;  
+    text-shadow: 4px 4px #292729;  
     text-transform: uppercase;
 }
 .home .content p{
     font-size: 2.5rem;
     color: white;
-    text-shadow: 1px 1px #292729;
+    text-shadow: 2px 2px #292729;
     padding: 1rem 0;
     line-height: 2;
 }
@@ -142,7 +142,7 @@
    
 }
 .about .flex .content p{
-    padding: 2rem 2rem 4rem;
+    padding: 2rem 2rem 3rem;
     line-height: 1.5;
     font-size: 1.9rem;
     color: rgb(58, 57, 57);
@@ -171,4 +171,121 @@
     font-size: 1.8rem;
 
 }
+
+
+.row1 .column1 .search{
+    font-size: 18px;
+    padding-left: 240px;
+
+}  
+.row1 .column1 .search .search-txt{
+    
+    border-radius: 5px;
+}
+.row1 .column2 .dropdown .form-control{
+    font-size: 17px;
+    line-height: 3;
+    border-radius: 6px;
+
+}
+
+.lead{
+    padding-left: 10px;
+    font-size: 4rem;
+    color: purple;
+}
+
+.choose{
+    min-height: 55vh;
+    background-image: url('greenery.jpg') ;
+    background-size: contain;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.choose .content{
+    text-align: center;
+    width: 60rem;
+}
+.choose .content h1{
+    font-size: 7.5rem;
+    color: rgb(252, 252, 251);
+    text-shadow: 4px 4px #292729;  
+    text-transform: uppercase;
+}
+.choose .content p{
+    font-size: 2.5rem;
+    color: rgb(255, 251, 251);
+    text-shadow: 2px 2px #292729;
+    padding: 1rem 0;
+    line-height: 2;
+}
+
+
+.about .flex .content-box{
+    flex: 1 1 50rem;
+    padding: 3rem;
+    background-color: rgb(239, 237, 237);
+}
+.about .flex .content-box h2{
+    padding: 2.5rem 2rem 0;
+    font-size: 3.7rem;
+    color: black;
+   
+}
+.about .flex .content-box p{
+    padding: 2rem 2rem 0rem;
+    line-height: 1.5;
+    font-size: 1.9rem;
+    color: rgb(58, 57, 57);
+}
+
+.reviews .box-container{
+    max-width: 1200px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 30rem);
+    align-items: center;
+    gap: 3rem;
+    justify-content: center;
+}
+.reviews .box-container .box{
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    border: 3px black;
+    border-radius: .5rem;
+    text-align: center;
+    padding: 2rem;
+    
+}
+
+.reviews .box-container .box img{
+    height: 12rem;
+    width: 12rem;
+    border-radius: .5rem;
+}
+.reviews .box-container .box p{
+    padding: 1rem 0;
+    line-height: 2;
+    color: rgb(24, 22, 22);
+    font-size: 1.5rem;
+}
+.reviews .box-container .box .stars{
+background-color: var(--light-bg);
+display: inline-block;
+margin: .5rem 0;
+border: black;
+border-radius: .5rem;
+padding: .5rem 1.5rem;
+}
+
+.reviews .box-container .box .stars i{
+font-size: 1.7rem;
+color: orange;
+margin: 0 .5rem;
+}
+
+
+
 
