--- a/bootstrap/css/background.css
+++ b/bootstrap/css/background.css
@@ -22,6 +22,7 @@
 .lead{
     padding-left: 10px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: purple;
 }
 .background1{
     min-height: 100vh;
