--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -190,8 +190,8 @@
 }
 
 .lead{
-    padding-left: 10px;
-    font-size: 4rem;
+    margin-left: 15px;
+    font-size: 3rem;
     color: purple;
 }
 
